--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <nav><a href="./Home.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="./About.html">About</a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="./Audio-Vedio.html">Audio/Vedio</a>
+    <nav><a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="./About.html">About</a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="./Audio-Vedio.html">Audio/Vedio</a>
         &nbsp; &nbsp; &nbsp; &nbsp; <a href="./Class-Attendance.html">Attendance</a> &nbsp; &nbsp; &nbsp; <a href="./Contect-Us.html">Contect Us</a>
         &nbsp; &nbsp; &nbsp; <a href="./Laws-Of-Exponents.html">Law Of Exponents</a></nav>
       <div> <CENTER><h1>Muhammad Hamza</h1></CENTER> </div><HR><BR>
